crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__function__complex-func1.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/function/complex-func1
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "The values are 6 and 10.\n" [Ended]
outcome: Ended
