crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__function__empty-return-inline-call-whole-line.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/function/empty-return-inline-call-whole-line
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Before.\n" [Continue]
> "\n" [Continue]
> "After.\n" [Ended]
outcome: Ended
