crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__function__evaluating-function-variablestate-bug.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/function/evaluating-function-variablestate-bug
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Start\n" [Continue]
> "In tunnel.\n" [Continue]
> "End\n" [Ended]
outcome: Ended
