crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__function__func-basic.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/function/func-basic
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "The value of x is 4.4.\n" [Ended]
outcome: Ended
