crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__function__test-error.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/function/test-error
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "" [Done]
outcome: Done
